[package]
name = "protos"
version = "0.1.0"
authors = ["Victor Korkin <victor.korkin@gmail.com>"]

[dependencies]
common = {path="common", version="*"}
ethernet = {path="ethernet", version="*"}
ethertype = {path="ethertype", version="*"}
vlan = {path="vlan", version="*"}
arp = {path="arp", version = "*"}

