[package]
name = "arp"
version = "0.1.0"
authors = ["Victor Korkin <victor.korkin@gmail.com>"]

[dependencies]
libc = "*"
byteorder = "1"
common = {path="../common", version = "*"}
ethernet = {path = "../ethernet" , version = "*"}
vlan = {path="../vlan", version="*"}
ethertype = {path = "../ethertype" , version = "*"}